--- a/cart.html
+++ b/cart.html
@@ -14,18 +14,22 @@
 
 <div class="cart-summary">
     <p>Selected items: <span id="item-count">0</span></p>
-    <p>Total: <span id="total-price">0.00</span></p>
-    <button class="checkout-btn">Checkout • $0.00</button>
-       <button class="add-more" onclick="window.location.href='catalog.html'">
-            Add more items
-        </button>
+    <p>Total: $<span id="total-price">0.00</span></p>
 
-        <button class="go-back" onclick="window.location.href='catalog.html'">
-            Go back
-        </button>
-        <!-- Bottom Navigation Tab -->
+    <!-- Checkout button linking to checkout page -->
+    <button class="checkout-btn" id="checkoutBtn" onclick="window.location.href='checkout.html'">Checkout • $0.00</button>
 
+    <!-- Add more items button -->
+    <button class="add-more" onclick="window.location.href='catalog.html'">
+        Add more items
+    </button>
+
+    <!-- Go back button -->
+    <button class="go-back" onclick="window.location.href='catalog.html'">
+        Go back
+    </button>
 </div>
+
 
 
 <script src="cart.js"></script>
